# ECSAI

./: .gitignore  LICENSE  bus_conversa_demo.py  check_git.py  llm_factory_demo.py  pyproject.toml  readme.md  test_framework_completo.py  test_install.py  tutorial_comprehensive.md
docs/: ECSAI_API_Guide.md
src/: EventBus.py  Events.py  __init__.py  demo.py  main.py
src/Components/: ContextComponent.py  LLMComponent.py  OutputComponent.py  __init__.py
src/ecsa_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ecsaai/: Events.py  __init__.py  libs.py  main.py
src/ecsaai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/libs/: LLMFactory.py  logger.py
