[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecsaai"
version = "0.1.0"
description = "ECS Framework for Modular & Scalable AI Agents"
readme = "readme.md"
license = {text = "Private"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AI :: Agent Frameworks",
]
dependencies = [
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lebressa2/ECSAI"
Repository = "https://github.com/lebressa2/ECSAI.git"
Issues = "https://github.com/lebressa2/ECSAI/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", "*.egg-info"]
